--- a/Copy_of_Play_Store_App_Review_Analysis_Capstone_Project_by_kushal.ipynb
+++ b/Copy_of_Play_Store_App_Review_Analysis_Capstone_Project_by_kushal.ipynb
@@ -49,19 +49,47 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dByMsuzT8Tnw"
-      },
+      "cell_type": "markdown",
       "source": [
-        "# IMPORTING LIBRARIES\n",
+        "# **What is Exploratory Data Analysis?**\n",
+        "Exploratory data analysis (EDA) is used by data scientists to analyze and investigate data sets for patterns, and anomalies (outliers), and form hypotheses based on our understanding of the dataset and summarize their main characteristics, often employing data visualization methods. It is an important step in any Data Analysis or Data Science project. It helps determine how best to manipulate data sources to get the answers you need.\n",
+        "\n",
+        "EDA involves generating summary statistics for numerical data in the dataset and creating various graphical representations to understand the data better and make it more attractive and appealing.\n",
+        "\n",
+        "The following are the various steps involved in the EDA process:\n",
+        "\n",
+        "1.**Problem Statement** - We shall brainstorm and understand the given data set. We shall study the attributes present in it and try to do a philosophical analysis about their meaning and importance for this problem.\n",
+        "\n",
+        "2.**Hypothesis** - Upon studying the attributes present in the data base, we shall develop some basic hypothesis on which we can work and play with the data to look for the varied results which we can get out of it.\n",
+        "\n",
+        "3.**Univariate Analysis** - It is the simplest form of analyzing the data. In this we would initially pick up a single attribute and study it in and out. It doesn't deal with any sort of co-relation and it's major purpose is to describe. It takes data, summarizes that data and finds patterns in the data.\n",
+        "\n",
+        "4.**Bivariate Analysis** - This analysis is related to cause and the relationship between the two attributes. We will try to understand the dependency of attributes on each other.\n",
+        "\n",
+        "5.**Multivariate Analysis** - This is done when more than two variables have to be analyzed simultaneously.\n",
+        "\n",
+        "6.**Data Cleaning** - We shall clean the dataset and handle the missing data, outliers and categorical variables.\n",
+        "\n",
+        "7.**Testing Hypothesis** - We shall check if our data meets the assumptions required by most of the multivariate techniques."
+      ],
+      "metadata": {
+        "id": "iEmvQlSYsRdJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import Library\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "import seaborn as sns"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "G3ws0B2jrpmB"
+      },
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -75,15 +103,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_SpYji89GKAz",
-        "outputId": "38fe840a-cf38-414d-ab27-836bc7ab7b0a"
+        "outputId": "467789f8-2a78-4dd6-ab24-4052cb16b88e"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -97,32 +125,37 @@
       "metadata": {
         "id": "AQVoHnYTGTFf"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "ps_data_df.shape"
+        "# Finding the number of rows and columns in the given dataset\n",
+        "print(ps_data_df.columns)\n",
+        "rows=ps_data_df.shape[0]\n",
+        "columns=ps_data_df.shape[1]\n",
+        "print(f\"the no of rows is {rows} and no of columns is {columns}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "r1JfpbIDGTQD",
-        "outputId": "3cf5027a-5b94-431f-fd90-7979ad339689"
+        "id": "wRSuG0N3uE1y",
+        "outputId": "018471e7-8bcd-4bd8-a388-ef67c302a287"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(10841, 13)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['App', 'Category', 'Rating', 'Reviews', 'Size', 'Installs', 'Type',\n",
+            "       'Price', 'Content Rating', 'Genres', 'Last Updated', 'Current Ver',\n",
+            "       'Android Ver'],\n",
+            "      dtype='object')\n",
+            "the no of rows is 10841 and no of columns is 13\n"
+          ]
         }
       ]
     },
@@ -136,9 +169,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DwuDdKeNGysz",
-        "outputId": "6c8c4e15-a4de-45c0-ea7f-de033ab71b40"
+        "outputId": "a7ae9120-408a-4de1-a992-ec4269b39bac"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +233,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 34
         }
       ]
     },
@@ -215,9 +248,9 @@
           "height": 617
         },
         "id": "F979zOw9Gyyb",
-        "outputId": "1fa99480-3775-4a17-bada-51c03583de93"
+        "outputId": "f02fa8ad-694b-4bd6-c554-ac23761efec0"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +286,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-180b5f45-8cd9-4f4e-872a-d490fc87ce6d\">\n",
+              "  <div id=\"df-64e2953f-75a2-4806-b483-59694643c77c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -372,7 +405,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-180b5f45-8cd9-4f4e-872a-d490fc87ce6d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-64e2953f-75a2-4806-b483-59694643c77c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -423,12 +456,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-180b5f45-8cd9-4f4e-872a-d490fc87ce6d button.colab-df-convert');\n",
+              "          document.querySelector('#df-64e2953f-75a2-4806-b483-59694643c77c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-180b5f45-8cd9-4f4e-872a-d490fc87ce6d');\n",
+              "          const element = document.querySelector('#df-64e2953f-75a2-4806-b483-59694643c77c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -451,7 +484,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 35
         }
       ]
     },
@@ -466,7 +499,7 @@
           "height": 496
         },
         "id": "5eOzmw9fGy3l",
-        "outputId": "a42a30ef-2587-48b6-ca89-a412f1470038"
+        "outputId": "2dd2367a-8f7c-4bc0-d840-709f6aea73ad"
       },
       "execution_count": null,
       "outputs": [
@@ -504,7 +537,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-86d818d3-f353-4e4e-ab21-479584124fae\">\n",
+              "  <div id=\"df-4aa27b76-41c7-4049-acb1-c44e874f93ec\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -623,7 +656,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-86d818d3-f353-4e4e-ab21-479584124fae')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4aa27b76-41c7-4049-acb1-c44e874f93ec')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -674,12 +707,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-86d818d3-f353-4e4e-ab21-479584124fae button.colab-df-convert');\n",
+              "          document.querySelector('#df-4aa27b76-41c7-4049-acb1-c44e874f93ec button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-86d818d3-f353-4e4e-ab21-479584124fae');\n",
+              "          const element = document.querySelector('#df-4aa27b76-41c7-4049-acb1-c44e874f93ec');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -749,7 +782,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CK78APJKH3Om",
-        "outputId": "128b9208-1d6f-42a0-9ac7-1b1484d51a14"
+        "outputId": "738d5746-4623-48b8-dd96-de9c97f4178d"
       },
       "execution_count": null,
       "outputs": [
@@ -786,7 +819,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hUQK5RLwH3XF",
-        "outputId": "31f7fa3e-fa49-4b3a-b737-ad0491db2f12"
+        "outputId": "790da12f-e7fc-4bd9-d45e-c24373649fee"
       },
       "execution_count": null,
       "outputs": [
@@ -837,7 +870,7 @@
           "height": 617
         },
         "id": "fK2RNOO9IB1m",
-        "outputId": "b08c250e-ca0c-49a6-9039-99f619a9bb49"
+        "outputId": "da411bad-ae08-4869-8f26-3afd861726cd"
       },
       "execution_count": null,
       "outputs": [
@@ -875,7 +908,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7674b625-06ef-44df-99ec-5b323703df61\">\n",
+              "  <div id=\"df-75b8d7c3-2401-47b2-a3b6-11579dcf8235\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -994,7 +1027,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7674b625-06ef-44df-99ec-5b323703df61')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-75b8d7c3-2401-47b2-a3b6-11579dcf8235')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1045,12 +1078,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7674b625-06ef-44df-99ec-5b323703df61 button.colab-df-convert');\n",
+              "          document.querySelector('#df-75b8d7c3-2401-47b2-a3b6-11579dcf8235 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7674b625-06ef-44df-99ec-5b323703df61');\n",
+              "          const element = document.querySelector('#df-75b8d7c3-2401-47b2-a3b6-11579dcf8235');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1087,7 +1120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qhJt0944IYfe",
-        "outputId": "1c15d5b0-c8d1-4b0f-9000-fdfb630b7c67"
+        "outputId": "0f3d13d8-7d09-4fa4-fea3-4f230e745cc6"
       },
       "execution_count": null,
       "outputs": [
@@ -1125,7 +1158,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X9AQoIBIIYpy",
-        "outputId": "164af393-2c41-40cb-a468-052274390a99"
+        "outputId": "21745e69-0287-4495-a5ab-0b42a74e92cc"
       },
       "execution_count": null,
       "outputs": [
@@ -1147,10 +1180,25 @@
         "ps_data_df_copy['Installs'].sum()"
       ],
       "metadata": {
-        "id": "sm_Q09dwKj-l"
+        "id": "sm_Q09dwKj-l",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ae674f61-3b42-403c-f48a-35017845f691"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "167633433487"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1166,7 +1214,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YPzGhNhWKkH0",
-        "outputId": "6ae448bb-5e69-4db4-a464-07c2a0ce2453"
+        "outputId": "6391ac2b-7d9d-411d-f054-647b1c44eda0"
       },
       "execution_count": null,
       "outputs": [
@@ -1197,7 +1245,7 @@
           "height": 671
         },
         "id": "VVPcy5GYKkM1",
-        "outputId": "f3698bf6-f7b6-4a9d-e714-3e46e8646b69"
+        "outputId": "7a417c10-b5fb-4e47-fe85-43429698fb26"
       },
       "execution_count": null,
       "outputs": [
@@ -1226,7 +1274,7 @@
           "height": 206
         },
         "id": "qgphWTAFIYuP",
-        "outputId": "702a16e9-3515-4900-a5e6-18ea6f97bd3c"
+        "outputId": "65bd2d04-140c-4164-d6d1-02e34b370ac7"
       },
       "execution_count": null,
       "outputs": [
@@ -1243,7 +1291,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ec0a3a64-78e9-4b3f-9fe3-ca1b490fc84c\">\n",
+              "  <div id=\"df-c70926c8-8d05-42c5-bd64-ffdf6a176c0c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1296,7 +1344,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec0a3a64-78e9-4b3f-9fe3-ca1b490fc84c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c70926c8-8d05-42c5-bd64-ffdf6a176c0c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1347,12 +1395,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ec0a3a64-78e9-4b3f-9fe3-ca1b490fc84c button.colab-df-convert');\n",
+              "          document.querySelector('#df-c70926c8-8d05-42c5-bd64-ffdf6a176c0c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ec0a3a64-78e9-4b3f-9fe3-ca1b490fc84c');\n",
+              "          const element = document.querySelector('#df-c70926c8-8d05-42c5-bd64-ffdf6a176c0c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1375,7 +1423,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 21
         }
       ]
     },
@@ -1409,7 +1457,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gzk-mI8QLm61",
-        "outputId": "8ed47ff9-08b6-423e-bcb4-4dd9501a3aed"
+        "outputId": "eea10053-da9e-4e1e-a14a-ddfa4b43e7e9"
       },
       "execution_count": null,
       "outputs": [
@@ -1456,7 +1504,7 @@
           "height": 647
         },
         "id": "0qrYzNZfL11Z",
-        "outputId": "30b7eac4-cbf6-49b4-b3d3-1f41f43867f3"
+        "outputId": "b54e079d-99fb-4259-9b5f-153871eb8589"
       },
       "execution_count": null,
       "outputs": [
@@ -1468,7 +1516,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 24
         },
         {
           "output_type": "display_data",
