--- a/Copy_of_Play_Store_App_Review_Analysis_Capstone_Project_by_kushal.ipynb
+++ b/Copy_of_Play_Store_App_Review_Analysis_Capstone_Project_by_kushal.ipynb
@@ -9239,7 +9239,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Creatng a new column 'Revenue' in paid_df\n",
+        "#Creating a new column 'Revenue' in paid_df\n",
         "paid_df['Revenue'] = paid_df['Installs']*paid_df['Price']\n",
         "paid_df.head()"
       ],
@@ -9249,9 +9249,9 @@
           "height": 623
         },
         "id": "BQMxUZ0xhhB4",
-        "outputId": "cf6747f0-5208-4d0e-ce3b-1ce1e575f35e"
+        "outputId": "f0079fd1-b1a1-4363-bcf2-302e24c0ae0e"
       },
-      "execution_count": 98,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
@@ -9292,7 +9292,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-770392bf-df94-4770-bb2a-1ffdad4152e6\">\n",
+              "  <div id=\"df-227921cd-e7a6-479f-9431-4177e4f5f6b0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -9423,7 +9423,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-770392bf-df94-4770-bb2a-1ffdad4152e6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-227921cd-e7a6-479f-9431-4177e4f5f6b0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -9474,12 +9474,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-770392bf-df94-4770-bb2a-1ffdad4152e6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-227921cd-e7a6-479f-9431-4177e4f5f6b0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-770392bf-df94-4770-bb2a-1ffdad4152e6');\n",
+              "          const element = document.querySelector('#df-227921cd-e7a6-479f-9431-4177e4f5f6b0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -9502,7 +9502,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 113
         }
       ]
     },
